# Nano-ant

./: .gitignore  DESIGN.md  LICENSE  MANIFEST.in  README.md  README_EN.md  config.example.yaml  main.py  pyproject.toml  setup.py  todo.md
examples/: claude_code_config.py
examples/external_zao_news_flash_case/: README.md  evaluate_zao_news_flash.py
examples/external_zao_tagging_case/: README.md  ant.yaml  evaluate_zao_tagging.py  prompt_use.md
examples/product_prompt_sample/: .nano_ant_template.yaml  README.md  ant.yaml  cases.json  eval_report.json  eval_runner.py  judge_skill.yaml  prompt.txt  target_llm.yaml  task.md
nano_ant/: __init__.py  cli.py  config.py  interactive.py  runner.py  template_mode.py
nano_ant/agent/: __init__.py  action_models.py  orchestrator.py
nano_ant/agent/roles/: base.py  (+6 more)
nano_ant/checkpoint/: __init__.py  manager.py
nano_ant/harness/: __init__.py  effect_tracker.py  feedback_artifact.py  prompt_registry.py  reproducibility.py  sandbox_pool.py  telemetry.py  workflow_state_machine.py
nano_ant/integration/: __init__.py  adapter_base.py  external_task.py
nano_ant/judge/: __init__.py  skills.py
nano_ant/llm/: __init__.py  claude_code_client.py  client.py
nano_ant/memory/: __init__.py  context.py
nano_ant/prompts/: action.txt  coding.txt  judge.txt  leader.txt  plan.txt
nano_ant/sandbox/: __init__.py  executor.py
nano_ant/tasks/: __init__.py  base.py  default_eval_runner.py  internal_task.py  project_task.py
nano_ant/tools/: __init__.py  base.py  builtin.py  executor.py  provider.py  registry.py
scripts/: package.sh
(+6 files in other folders)
